// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallRoute component should display install modal if app found in the registry but not installed 1`] = `
<Wrapper
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "locales": Object {
        "en": Object {
          "long_description": "A long description finally short",
        },
      },
      "name": "Photos",
      "name_prefix": "Cozy",
      "slug": "photos",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  dismissAction={[Function]}
  onInstalled={[Function]}
  onSuccess={[Function]}
/>
`;

exports[`InstallRoute component should display install modal if app found in the registry installed but with available version 1`] = `
<Wrapper
  app={
    Object {
      "availableVersion": "3.0.0",
      "categories": Array [
        "partners",
      ],
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Tasky",
      "slug": "tasky",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
          "1.0.0",
        ],
        "dev": Array [
          "3.0.0",
          "1.0.0",
        ],
        "stable": Array [
          "3.0.0",
          "1.0.0",
        ],
      },
    }
  }
  dismissAction={[Function]}
  onInstalled={[Function]}
  onSuccess={[Function]}
/>
`;
